HW2/grammar.ebnf
(* Токены берём из HW1; пробелы и комментарии пропускаем.
   EBNF: [...] — необязательная часть, {...} — повторение, | — выбор.
   В модуле нужно хотя бы одно объявление.
   arithmetic, condition и predicate разбираются через общий expression без отката:
   сначала строим дерево (в том числе для скобок), затем проверяем, допустимо ли оно здесь.
*)

module          = declaration { declaration } EOF ;
declaration     = [ "function" ] IDENT "(" [ parameters ] ")" declarationTail ;
declarationTail = "=>" predicate [ ";" ]
                | [ "requires" predicate ] "returns" results
                  [ "requires" predicate ] [ "ensures" predicate ]
                  [ "uses" locals ] statement ;
(* "function" — только у функции. requires пишется один раз: до или после returns.
*)

parameters      = variableDef { "," variableDef } ;
results         = variableDef { "," variableDef } ;
variableDef     = IDENT ":" variableType ;
variableType    = "int" [ "[" "]" ] ;
locals          = localDef { "," localDef } ;
localDef        = IDENT [ ":" variableType ] ;

statement       = assignment | conditional | loop | block
                | "assert" predicate ";" | "assume" predicate ";" ;
block           = "{" { statement } "}" ;
assignment      = IDENT assignmentTail ;
assignmentTail  = { "[" arithmetic "]" } "=" arithmetic ";"
                | "," IDENT { "," IDENT } "=" arithmetic ";" ;
conditional     = "if" "(" condition ")" statement [ "else" statement ] ;
loop            = "while" "(" condition ")" [ "invariant" predicate ] statement ;
(* В if (a < b) if (c < d) x=1; else x=2;
   else относится к внутреннему if (c < d): его _if() читает ветку первым.
   Чтобы отдать else внешнему if, внутренний нужно поместить в { ... }.
   Грамматика с необязательным else сама допускает обе привязки;
   правило «к ближайшему if» задаёт выбор парсера.
*)

arithmetic      = expression ;
condition       = expression ;
predicate       = expression ;
expression      = implication ;
implication     = disjunction [ ("->" | "→") implication ] ;
disjunction     = conjunction { "or" conjunction } ;
conjunction     = negation { "and" negation } ;
negation        = "not" negation | comparison ;
comparison      = addition [ comparisonOp addition ] ;
comparisonOp    = "==" | "!=" | "<=" | ">=" | "<" | ">" ;
addition        = multiplication { ("+" | "-") multiplication } ;
multiplication  = unary { ("*" | "/") unary } ;
unary           = "-" unary | primary ;
primary         = INT | "true" | "false" | quantifier
                | "(" expression ")" | IDENT identifierTail | lengthCall ;
identifierTail  = "(" [ arguments ] ")" | { "[" arithmetic "]" } ;
lengthCall      = "length" "(" [ arguments ] ")" ;
arguments       = arithmetic { "," arithmetic } ;
quantifier      = ("forall" | "exists") "(" variableDef "|" predicate ")" ;

(* После разбора expression проверяем его форму:
   arithmetic — число, имя, вызов, индекс, унарный - и операции + - * /.
   condition — true/false, сравнения арифметики и not/and/or/->.
   predicate — то же плюс вызовы формул и forall/exists. length — арифметический вызов.
   Просто число или имя, например if (1), условием не считается.
   if (f()) — ошибка: самостоятельный вызов формулы допустим только в predicate.
   if (f() > 0) допустимо: здесь вызов входит в арифметику сравнения.
   Аргументы вызовов и индексы должны быть арифметикой; 1 < 2 < 3 — ошибка.

   В x,y=f() слева только имена, справа один вызов; x,y=(f()) тоже допустимо.
   a[i]=v превращается в Assign(a, ArrayUpdate(a,i,v)): обновляем копию массива.
   a[i][j]=v строит вложенные обновления, сохраняя остальные элементы внешнего массива.

   Контракт можно пропустить, но после его ключевого слова нужно выражение.
   Если раздела нет: requires=true, ensures=false, invariant=true.
   Типы объявлений — int/int[]; var и логических переменных нет.
   Проверка имён, типов и сигнатур вызовов остаётся для HW3.

   Приоритет от сильного к слабому: унарный -, * /, + -, сравнение, not, and, or, ->.
   + - * / and/or группируются слева, -> справа; цепочки сравнений запрещены.
   Имена — ASCII с подчёркиваниями, как в HW1. -> и → дают один оператор -> в AST.
   Остальной Unicode разрешён только внутри комментариев.
*)
